<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.PokemonDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/headerBackgroundImg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/details_header_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/header_background_image" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_btn" />

    <ImageView
        android:id="@+id/savePokemonBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="3dp"
        android:src="@drawable/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/save_pokemon_image" />

    <ImageView
        android:id="@+id/pokemonImageImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_pikachu"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/pokemonIdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:alpha="0.4"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pokemonNameDetailsTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonImageImg"
        tools:text="#Id" />

    <TextView
        android:id="@+id/pokemonNameDetailsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokemonIdTxt"
        app:layout_constraintTop_toBottomOf="@id/pokemonImageImg"
        tools:text="PokemonName" />


    <LinearLayout
        android:id="@+id/type_list"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonNameDetailsTxt">

        <TextView
            android:id="@+id/typeSlotOneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/type_background_shape"
            android:backgroundTint="@color/normal_color"
            android:elevation="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="25dp"
            android:paddingVertical="4dp"
            android:textColor="@color/steel_color"
            android:textSize="15sp"
            android:visibility="gone"
            tools:text="Fighting"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/typeSlotTwoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/type_background_shape"
            android:backgroundTint="@color/normal_color"
            android:elevation="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="25dp"
            android:paddingVertical="4dp"
            android:textColor="@color/steel_color"
            android:textSize="15sp"
            android:visibility="gone"
            tools:text="Fighting"
            tools:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_list">

        <TextView
            android:id="@+id/weightTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/weight"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weightValueTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3.5Kg" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/type_list">

        <TextView
            android:id="@+id/heightTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/height"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/heightValueTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2m" />

    </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/weight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="horizontal"
         android:weightSum="4"
         android:layout_marginTop="8dp"
         android:baselineAligned="false">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/hp"
                 android:textColor="@android:color/holo_red_dark"
                 />
             <TextView
                 android:id="@+id/hpTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/hp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/atk"
                 android:textColor="@android:color/holo_blue_dark"
                 />
             <TextView
                 android:id="@+id/atkTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/atk" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/def"
                 android:textColor="@android:color/holo_green_dark"
                 />
             <TextView
                 android:id="@+id/defTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/def" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
             android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/spd"
                 android:textColor="@android:color/holo_orange_dark"
                 />
             <TextView
                 android:id="@+id/spdTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="30sp"
                 android:text="@string/spd" />
         </LinearLayout>
     </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>